infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: parquimetro
  labels:
    app.kubernetes.io/managed-by: kubectl
